[gd_scene load_steps=5 format=3 uid="uid://b6tgfty1qdw4a"]

[ext_resource type="Texture2D" uid="uid://b6tw7cndx85hk" path="res://arcade_game/assets/sprites.png" id="1_0der0"]
[ext_resource type="Script" path="res://arcade_game/object/bit.gd" id="1_3fkug"]
[ext_resource type="AudioStream" uid="uid://i2h5p8hq47l6" path="res://arcade_game/assets/audio_pickup_bit_1.wav" id="3_bxssf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pwx8"]
size = Vector2(2, 2)

[node name="Bit" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_3fkug")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6pwx8")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_0der0")
hframes = 2
region_enabled = true
region_rect = Rect2(0, 0, 16, 8)

[node name="AudioPickedUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bxssf")
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="AudioPickedUp" to="." method="_on_audio_picked_up_finished"]
